[package]
name = "rsn-fmt"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities", "development-tools", "value-formatting"]
description = "The rsn formatter"
keywords = ["RSN", "autoformatting", "beautify", "pretty-print"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/rsn-fmt"

[dependencies]
clap = { version = "4.2.1", features = ["derive", "wrap_help"] }
# rsn = { git = "https://github.com/khonsulabs/rsn" }
rsn = { git = "https://github.com/ModProg/rsn", branch = "infinit-ws-loop" }
# rsn = { path = "../rsn/" }

[dev-dependencies]
include_dir = "0.7.3"
insta = { version = "1.28.0" }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
