[package]
name = "rsn-fmt"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities", "development-tools", "value-formatting"]
description = "The rsn formatter"
keywords = ["RSN", "autoformatting", "beautify", "pretty-print"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/rsn-fmt"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive", "wrap_help"] }
derive_more = "0.99.17"
dirs-next = "2.0.0"
extend = "1.2.0"
figment = { version = "0.10.8", features = ["env"] }
rsn.git = "https://github.com/khonsulabs/rsn"
# rsn.git = "https://github.com/ModProg/rsn"
# rsn.branch = "clonable-tokenizer" 
# rsn.path = "../rsn/" 
rsn.features = ["std"]
serde = { version = "1.0.160", features = ["derive"] }
smart-default = "0.6.0"
thiserror = "1.0.40"

[dev-dependencies]
include_dir = "0.7.3"
insta = { version = "1.28.0" }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
