[package]
name = "rsn-fmt"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities", "development-tools", "value-formatting"]
description = "The rsn formatter"
keywords = ["RSN", "autoformatting", "beautify", "pretty-print"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/rsn-fmt"

[dependencies]
rsn = { git = "https://github.com/khonsulabs/rsn", rev = "3e85f0a7cba2989f97e8da79ff9792837bad3b91", features = ["std"], version = "0.1.0" }
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive", "wrap_help"] }
derive_more = "0.99.17"
dirs-next = "2.0.0"
extend = "1.2.0"
figment = { version = "0.10.8", features = ["env"] }
serde = { version = "1.0.163", features = ["derive"] }
smart-default = "0.7.1"
thiserror = "1.0.40"

[dev-dependencies]
include_dir = "0.7.3"
insta = { version = "1.29.0" }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
